--- a/GrecosQuestionnaire/appsettings.json
+++ b/GrecosQuestionnaire/appsettings.json
@@ -2,9 +2,11 @@
   "ConnectionStrings": {
     //"Hotels": "Server=(localdb)\\MSSQLLocalDB;Database=Hotels;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False",
     //"HotelsImport": "Server=(localdb)\\MSSQLLocalDB;Database=magic;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False",
-    "Hotels": "Server=DEVMACHINE;Database=Hotels;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False",
+    //"Hotels": "Server=DEVMACHINE;Database=Hotels;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False",
     //"HotelsImport": "Server=grecosdb.magicware.cz;Database=GrecosScripts;User Id=grecospl;Password=G@Mon€S3rve;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False"
-    "HotelsImport": "Data Source=grecosdb.magicware.cz;Initial Catalog=GrecosScripts;Persist Security Info=False;User ID=grecospl;Password=G@Mon€S3rve;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False"
+    //"HotelsImport": "Data Source=grecosdb.magicware.cz;Initial Catalog=GrecosScripts;Persist Security Info=True;User ID=grecospl;Password=G@Mon&euro;S3rve"
+    "Hotels": "Server=DEVMACHINE;Database=Hotels;User ID=hotel;Password=InFB1#DD!",
+    "HotelsImport": "Data Source=grecosdb.magicware.cz;Initial Catalog=GrecosScripts;Persist Security Info=True;User ID=domdata;Password=InFB1#DD!;MultipleActiveResultSets=true"
 
   },
   "Logging": {
