--- a/GrecosQuestionnaire/appsettings.json
+++ b/GrecosQuestionnaire/appsettings.json
@@ -5,6 +5,26 @@
 
 
   },
+  //"Email": {
+  //  "Server": "smtp.gmail.com",
+  //  "Port": 587,
+  //  "SenderName": "Ankieta",
+  //  "SenderEmail": "filip.kielban@gmail.com",
+  //  "Account": "filip.kielban@gmail.com",
+  //  "Password": "Kielban1",
+  //  "Security":  true
+  //},
+
+  "Email": {
+    "Server": "poczta.o2.pl",
+    "Port": 587,
+    "SenderName": "Ankieta",
+    "SenderEmail": "daylight@o2.pl",
+    "Account": "daylight@o2.pl",
+    "Password": "Kielban11",
+    "Security": true
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
